# main_service

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml
src/main_service/: __init__.py  cluster.py  env_builder.py  helpers.py  monitor.py  node.py  test_scripts.py
src/main_service/endpoints/: cluster.py  jobs.py  nas.py
src/main_service/static/: dashboard.html  functions.js
tests/: README.md
